feat: async hot/cold storage, fix coverage, remove nelmio, update swagger
